syntax = "proto3";

option csharp_namespace = "WordServer.Protos";

/***** EMPTY MESSAGE *****/
import "google/protobuf/empty.proto";

package word;

service DailyWord {
  rpc GetWord (WordRequest) returns (WordReply);
  rpc ValidateWord (ValidateWordRequest) returns (ValidateWordReply);
}

message WordReply {
	string word = 1;
	string date = 2;
}

message WordRequest {

}

message ValidateWordRequest {
  string guess = 1;
}

message ValidateWordReply {
  bool valid = 1;
}